horizontal scroll fix

--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,7 @@ code {
   height: 80vh;
   top: 10%;
 }
+
+#service {
+  overflow-x: hidden;
+}
